# rust_rest_mongo

./: Cargo.toml  Readme.md  docker-compose.yml
.docker/: docker-compose.yml  localstack.DockerFile
.docker/init/: init.sh
src/: lib.rs  main.rs
src/auth/: authenticator.rs  mod.rs  token.rs  valid_token.rs
src/config/: logging.rs  mod.rs  mongo_client.rs  sqs_client.rs
src/dto/: user_dto.rs
src/error_handler/: bad_request_exception.rs  base_exception.rs  internal_server_exception.rs  mod.rs  not_found_exception.rs
src/error_handler/model/: app_error.rs
src/factory/: insert_user_dto.rs  mod.rs  user_factory.rs
src/listeners/: mod.rs
src/model/: mod.rs
src/model/crud/: user.rs
src/model/learn/: body_mirror.rs  mod.rs  query_mirror.rs
src/repository/: user_repository.rs
src/routes/: mod.rs
src/routes/crud/: create.rs  delete.rs  find_all.rs  find_by_id.rs  mod.rs  update.rs
src/routes/learn/: hello_world.rs  json_body.rs  mod.rs  path_mirror.rs  query_mirror.rs
src/service/: user_service.rs
src/support/: app_state.rs  mod.rs  result_wrapper.rs  sqs_listener.rs
tests/: user_test.rs
tests/common/: mod.rs  models.rs  test_containers.rs
