[package]
name = "rust_rest_mongo"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
mongodb = "3.0.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
validator = { version = "0.18.1", features = ["derive"] }
uuid = "1.10.0"
async-trait = "0.1.81"
mockall = "0.13.0"

aws-config = { version= "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.42.0"
serde_json = "1.0.124"
reqwest = { version = "0.12.7", features = ["json"] }
jsonwebtoken = "9.3.0"


[dev-dependencies]
testcontainers = { version = "0.22.0", features = ["blocking"] }
testcontainers-modules = { version = "0.10.0", features = ["mongo"] }
once_cell = "1.19.0"